Revise the class name of hotel view

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -27,7 +27,7 @@
 }
 
 .hotel-view {
-  background-color: #fff;
+  //background-color: #fff;
   background-color: orangered;
 
   flex: 1;                                            // flex element will grow as mush as it can
