--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,22 +2,61 @@
 // LOGO
 .logo {
   height: 3.25rem;
+  margin-left: 3rem;
 }
 
 //////////////////////////////////////
 // SEARCH
 .search {
-  &__input {
+  flex: 0 0 40%;
 
+  display: flex;                                          // make input and search button in an row with same flex height
+  align-items: center;                                    // make flex elements in center position vertically
+  justify-content: center;                                // make flex elements in center position horizontally
+
+  &__input {
+    font-family: inherit;                                 // inherit: 繼承至父層的 font-family 設定値。
+    font-size: inherit;
+    color: inherit;
+    background-color: var(--color-grey-light-2);
+    border: none;
+    padding: .7rem 2rem;
+    border-radius: 100px;
+    width: 90%;
+    transition: all .2s;
+    margin-right: -3.25rem;                                // Solved - search button wrapping, so it will move on top
+
+    &:focus {
+      outline: none;                                      // without border
+      width: 100%;
+      background-color: var(--color-grey-light-3);
+    }
+  }
+
+  // using adjacent selector to select the sibling of the selected input
+  &__input:focus + &__button {
+    background-color: var(--color-grey-light-3);
   }
 
   &__button {
+    border: none;
+    background-color: var(--color-grey-light-2);
 
+    &:focus {
+      outline: none;                                      // without border
+    }
+
+    &:active {
+      transform: translateY(2px);
+    }
   }
 
   &__icon {
-    height: 3rem;
+    height: 2rem;
     width: 2rem;
+    fill: var(--color-grey-dark-3);                       // filling in the color of a SVG shape
+
+
   }
 }
 
@@ -25,6 +64,8 @@
 //////////////////////////////////////
 // USER NAVIGATION
 .user-nav {
+  background-color: greenyellow;
+
   &__icon-box {
 
   }
