--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -12,6 +12,10 @@
   height: 7rem;
   background-color: #fff;
   border-bottom: var(--color-grey-light-2);
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .content {
@@ -19,7 +23,7 @@
 }
 
 .sidebar {
-  background-color: var(--color-grey-dark-1);
+  background-color:i var(--color-grey-dark-1);
 
   flex: 0 0 18%;                                      // NO flex-grow if there are some space;
                                                       // No shirk if there are not enough space
