To change the placeholder text

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -31,6 +31,12 @@
       width: 100%;
       background-color: var(--color-grey-light-3);
     }
+
+    // To change the placeholder text
+    &::-webkit-input-placeholder {                        // Only work for webkit, like Chrome and Safari browsers
+      font-weight: 100;
+      color: var(--color-grey-light-4);
+    }
   }
 
   // using adjacent selector to select the sibling of the selected input
