--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,14 +1,15 @@
 .container {
   max-width: 120rem;
   margin: 8rem auto;
-  background-color: var(--color-grey-light-2);
-  box-shadow: 0 2rem 6rem rgba(0,0,0,.3);
+  background-color: var(--color-grey-light-1);
+  box-shadow: var(--shaw-dark);
 
   min-height: 50rem;
 }
 
 
 .header {
+  font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
   border-bottom: var(--color-grey-light-2);
