Build the header

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,7 +2,7 @@
 // LOGO
 .logo {
   height: 3.25rem;
-  margin-left: 3rem;
+  margin-left: 2rem;
 }
 
 //////////////////////////////////////
@@ -70,17 +70,20 @@
 //////////////////////////////////////
 // USER NAVIGATION
 .user-nav {
-  background-color: greenyellow;
   align-self: stretch;                                    // To stretch the icon boxes vertically
 
   display: flex;                                          // To turn this into a flex container
   align-items: center;
 
-  // Create icon boxes for div>.user-nav__icon-box * 3
+  // Create icon boxes for all child <div>
   & > * {
     padding: 0 2rem;
     cursor: pointer;
     height: 100%;
+
+    // Center all child <div> vertically
+    display: flex;
+    align-items: center;
   }
 
   & > *:hover {
@@ -88,29 +91,38 @@
   }
 
   &__icon-box {
-
+    position: relative;
   }
 
   &__icon {
     height: 2.25rem;
     width: 2.25rem;
+    fill: var(--color-grey-dark-2);                       // To fill color for SVG
   }
 
   &__notification {
+    font-size: .8rem;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 50%;
+    background-color: var(--color-primary);
+    color: #fff;
 
-  }
+    // Display notification on the upper layer
+    position: absolute;
+    top: 1.5rem;
+    right: 1.1rem;
 
-  &__user {
-
+    // To center the text only
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__user-photo {
     height: 3.75rem;
     border-radius: 50%;
-  }
-
-  &__user-name {
-
+    margin-right: 1rem;
   }
 }
 
