Revise code of sidebar for bg color

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -24,7 +24,7 @@
 }
 
 .sidebar {
-  background-color:i var(--color-grey-dark-1);
+  background-color: var(--color-grey-dark-1);
 
   flex: 0 0 18%;                                      // NO flex-grow if there are some space;
                                                       // No shirk if there are not enough space
