Build side navigation

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -130,17 +130,74 @@
 //////////////////////////////////////
 // SIDE NAVIGATION
 .side-nav {
-  &__item {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem;
 
+  // Related to the pseudo-element
+  &__item {
+    position: relative;
+
+    &:not(:last-child) {
+      margin-bottom: .5rem;
+    }
   }
 
-  &__link {
+  // Small line will becomes visible, and then expands to the right side
+  &__item::before {
+    content: "";                              // it must set content, otherwise it won't work on browser
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;                             // have same height of list item
+    width: 3px;
+    background-color: var(--color-primary);
 
+    // without hover, it will scale 0% vertically
+    transform: scaleY(0);
+    transform-origin: center;                 // set the start direction of scale transition
+    transition: transform .2s,                // Solved by delay .2s - Expand and scale transitions work at the same time
+                width .4s cubic-bezier(1,0,0,1) .2s,
+                background-color .05s;
+  }
+  
+  &__item:hover::before,
+  &__item--active::before {
+    cursor: pointer;
+    transform: scaleY(1);
+    width: 100%;
+  }
+
+  // When click the item, the color gets a little bit brighter
+  &__item:active::before {
+    background-color: var(--color-primary-light);
+  }
+
+  &__link:link,
+  &__link:visited {
+    color: var(--color-grey-light-1);
+    text-decoration: none;
+    text-transform: uppercase;
+    display: block;
+    padding: 1.5rem 3rem;
+
+    position: relative;
+    z-index: 10;
+
+    // Solved - <svg> and <span> are not well aligned, where <svg> is a little bit before <span>
+    display: flex;
+    align-items: center;
+  }
+
+  &__link:hover {
+    //color: orangered;
   }
 
   &__icon {
     width: 1.75rem;
     height: 1.75rem;
+    margin-right: 2rem;
+    fill: currentColor;                   // Using fill method to change SVG color to current text color as parent element
   }
 }
 
