--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -228,14 +228,21 @@
 // HOTEL OVERVIEW
 .overview {
   display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--color-grey-light-2);
 
   &__heading {
-
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem;
   }
 
   &__stars {
     //flex: 1;
     margin-right: auto;
+    display: flex;
   }
 
   &__icon-star,
@@ -259,6 +266,51 @@
 
   &__rating-count {
 
+  }
+
+}
+
+
+//////////////////////////////////////
+// BUTTON INLINE
+.btn-inline {
+  border: none;
+  color: var(--color-primary);
+  font-size: inherit;                                           // use inherit for smaller font size (reusable)
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  display: inline-block;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all .2s;
+
+  // apply transition
+  &:hover {
+    color: var(--color-grey-dark-1);
+  }
+
+  // Apply animation
+  &:focus {
+    outline: none;
+    animation: pulsate 1s infinite;                             // Solved - animations only work for one time
+  }
+}
+
+// Create animation
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba(0,0,0,.25);
+  }
+
+  100% {
+    transform: scale(1);
+    box-shadow: none;
   }
 
 }
