--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -253,19 +253,42 @@
   }
 
   &__location {
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+  }
 
+  &__icon-location {
+    margin-right: .5rem;
   }
 
   &__rating {
+    background-color: var(--color-primary);
+    color: #fff;
+    margin-left: 3rem;
+    padding: 0 2.25rem;
 
+    // Stretch the overview__rating
+    align-self: stretch;                  // related to above align-items: center
+
+    // Center the text in overview__rating vertically
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   &__rating-average {
+    font-size: 2.25rem;
+    font-weight: 300;
 
+    // Center the text in overview__rating vertically
+    margin-bottom: -3px;
   }
 
   &__rating-count {
-
+    font-size: .8rem;
+    text-transform: uppercase;
   }
 
 }
