--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -229,7 +229,7 @@
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);                               // 1px solid var(--color-grey-light-2)
 
   &__heading {
     font-size: 2.25rem;
