--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -12,7 +12,7 @@
   font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);                         // 1px solid var(--color-grey-light-2)
 
   display: flex;
   justify-content: space-between;
@@ -43,4 +43,23 @@
   height: 80rem;
 
   flex: 1;                                            // flex element will grow as mush as it can
+}
+
+
+.detail {
+  display: flex;
+  padding: 4.5rem;                                    // same value as margin-right of .description
+  background-color: var(--color-grey-light-1);
+  border-bottom: var(--line);
+}
+
+.description {
+  background-color: orangered;
+  flex: 0 0 60%;
+  margin-right: 4.5rem;
+}
+
+.user-reviews{
+  background-color: yellowgreen;
+  flex: 1;
 }
