Build description section with list, paragraph, recommend

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -339,3 +339,87 @@
 }
 
 
+
+//////////////////////////////////////
+// PARAGRAPH
+.paragraph:not(:last-of-type) {               // For two .paragraph, only first .paragraph have such style
+  margin-bottom: 2rem;
+}
+
+
+
+//////////////////////////////////////
+// List
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
+
+  // Put element side by side
+  display: flex;
+  flex-wrap: wrap;
+
+  // Give item have same width
+  &__item {
+    flex: 0 0 50%;
+    margin-bottom: .7rem;
+  }
+
+  // Apply svg icon in css as background image to prevent mess up
+  &__item::before {
+    content: "";
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+    margin-right: .7rem;
+
+    // For Older browsers
+    background-image: url(../img/chevron-thin-right.svg);     // move up one level to the main project folder
+    background-size: cover;
+
+    // For Newer browsers - masks approach (best method)
+    // Fix background color cannot change color in css
+    background-color: var(--color-primary);
+    -webkit-mask-image: url(../img/chevron-thin-right.svg);   // Apply mask approach
+    -webkit-mask-size: cover;                                 // To look through element, and see background color in the area
+    mask-image: url(../img/chevron-thin-right.svg);
+    mask-size: cover;                                         // Fix the icon is too big
+  }
+}
+
+
+
+//////////////////////////////////////
+// RECOMMEND
+.recommend {
+  font-size: 1.3rem;
+  color: var(--color-grey-dark-3);
+
+  display: flex;
+  align-items: center;
+
+  &__count {
+    margin-right: auto;
+  }
+
+  &__friends {
+
+  }
+
+  &__photo {
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: .3rem solid #fff;
+
+    // Fix border go into the image
+    box-sizing: content-box;                              // the border to be added on top of our height and the width.
+
+    // slightly overlapping images
+    &:not(:last-child) {
+      margin-right: -1.5rem;
+    }
+  }
+}
