--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -157,10 +157,10 @@
     transform: scaleY(0);
     transform-origin: center;                 // set the start direction of scale transition
     transition: transform .2s,                // Solved by delay .2s - Expand and scale transitions work at the same time
-                width .4s cubic-bezier(1,0,0,1) .2s,
-                background-color .05s;
+    width .4s cubic-bezier(1,0,0,1) .2s,
+    background-color .05s;
   }
-  
+
   &__item:hover::before,
   &__item--active::before {
     cursor: pointer;
@@ -267,6 +267,7 @@
     color: #fff;
     margin-left: 3rem;
     padding: 0 2.25rem;
+    align-self: end;
 
     // Stretch the overview__rating
     align-self: stretch;                  // related to above align-items: center
@@ -307,9 +308,18 @@
   cursor: pointer;
   transition: all .2s;
 
+  & span {
+    margin-left: 3px;
+    transition: margin-left .2s;
+  }
+
   // apply transition
   &:hover {
     color: var(--color-grey-dark-1);
+
+    span {
+      margin-left: 8px;
+    }
   }
 
   // Apply animation
@@ -421,5 +431,75 @@
     &:not(:last-child) {
       margin-right: -1.5rem;
     }
+  }
+}
+
+
+
+//////////////////////////////////////
+// REVIEWS
+.review {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+
+  // Fix image overflow
+  overflow: hidden;
+
+  &__text {
+    margin-bottom: 2rem;
+    // put the text in front of quotation mark position
+    z-index: 10;
+    position: relative;
+  }
+
+  &__user {
+    display: flex;
+    align-items: center;
+  }
+
+  &__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem;
+  }
+
+  &__user-box {
+    // Put &__rating to the right
+    margin-right: auto;
+  }
+
+  &__user-name {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: .4rem;
+  }
+
+  &__user-date {
+    font-size: 1rem;
+    color: var(--color-grey-dark-3);
+  }
+
+  &__rating {
+    color: var(--color-primary);
+    font-size: 2rem;
+    font-weight: 300;
+  }
+
+  // Create huge quotation mark
+  &::before {
+    content:"\201C";                  // reference by https://css-tricks.com/snippets/html/glyphs/
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    line-height: 1;                   // the same height as the font-size
+    font-size: 20rem;
+    color: var(--color-grey-light-2);
+    font-family: san-serif;
+    z-index: 1;
   }
 }
