--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -44,6 +44,7 @@
 
 
 .detail {
+  font-size: 1.4rem;
   display: flex;
   padding: 4.5rem;                                    // same value as margin-right of .description
   background-color: var(--color-grey-light-1);
@@ -51,15 +52,17 @@
 }
 
 .description {
-  font-size: 1.4rem;
   background-color: #fff;
-  box-shadow: var(--shadow-line);
+  box-shadow: var(--shadow-light);
   padding: 3rem;
   flex: 0 0 60%;
   margin-right: 4.5rem;
 }
 
 .user-reviews{
-  background-color: yellowgreen;
   flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
