--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -5,6 +5,15 @@
   box-shadow: var(--shaw-dark);
 
   min-height: 50rem;
+
+  // hidden the background color (--color-primary)
+  @media only screen and (max-width: $bp-largest) {
+    margin: 0;
+
+    // Fix background color (--color-primary) is not hidden when max-width: $bp-large
+    max-width: 100%;
+    height: 100%;
+  }
 }
 
 
@@ -21,6 +30,11 @@
 
 .content {
   display: flex;                                      // make .sidebar and .hotel-view in a row
+
+  // Change the nav sidebar become column, rather than row
+  @media only screen and (max-width: $bp-medium) {
+    flex-direction: column;
+  }
 }
 
 .sidebar {
@@ -49,6 +63,11 @@
   padding: 4.5rem;                                    // same value as margin-right of .description
   background-color: var(--color-grey-light-1);
   border-bottom: var(--line);
+
+  // Decrease padding
+  @media only screen and (max-width: $bp-medium) {
+    padding: 3rem;
+  }
 }
 
 .description {
@@ -57,6 +76,12 @@
   padding: 3rem;
   flex: 0 0 60%;
   margin-right: 4.5rem;
+
+  // Decrease padding and margin
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-right: 3rem;
+  }
 }
 
 .user-reviews{
