--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -14,6 +14,17 @@
   align-items: center;                                    // make flex elements in center position vertically
   justify-content: center;                                // make flex elements in center position horizontally
 
+  // Move search button to the last position
+  @media only screen and (max-width: $bp-smallest) {
+    order: 1;
+
+    // extend the search button in the row
+    flex: 0 0 100%;
+
+    background-color: var(--color-grey-light-2);
+
+  }
+
   &__input {
     font-family: inherit;                                 // inherit: 繼承至父層的 font-family 設定値。
     font-size: inherit;
@@ -207,6 +218,12 @@
       justify-content: center;
       padding: 2rem;
     }
+
+    // Move svg on the top, and link text on the bottom
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column;
+      padding: 1.5rem .5rem;
+    }
   }
 
   &__link:hover {
@@ -218,6 +235,14 @@
     height: 1.75rem;
     margin-right: 2rem;
     fill: currentColor;                   // Using fill method to change SVG color to current text color as parent element
+
+    // samller the icon
+    @media only screen and (max-width: $bp-small) {
+      margin-right: 0;
+      margin-bottom: .7rem;
+      width: 1.5rem;
+      height: 1.5rem;
+    }
   }
 }
 
@@ -262,6 +287,12 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
+
+    // smaller the heading
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+      padding: 1.25rem 2rem;
+    }
   }
 
   &__stars {
@@ -302,6 +333,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    @media only screen and (max-width: $bp-small) {
+      padding: 0 1.5rem;
+    }
   }
 
   &__rating-average {
@@ -310,11 +345,21 @@
 
     // Center the text in overview__rating vertically
     margin-bottom: -3px;
+
+    // Decrease font-size
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.5rem;
+    }
   }
 
   &__rating-count {
     font-size: .8rem;
     text-transform: uppercase;
+
+    // Decrease font-size
+    @media only screen and (max-width: $bp-small) {
+      font-size: .5rem;
+    }
   }
 
 }
