--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -26,6 +26,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media only screen and (max-width: $bp-smallest) {
+    flex-wrap: wrap;
+
+    // justify position for the search button and other flex items
+    align-content: space-around;
+    height: 11rem;
+  }
 }
 
 .content {
@@ -68,6 +76,11 @@
   @media only screen and (max-width: $bp-medium) {
     padding: 3rem;
   }
+
+  // collapse the flex item
+  @media only screen and (max-width: $bp-small) {
+    flex-direction: column;
+  }
 }
 
 .description {
@@ -81,6 +94,12 @@
   @media only screen and (max-width: $bp-medium) {
     padding: 2rem;
     margin-right: 3rem;
+  }
+
+  // Decrease padding, and increase margin
+  @media only screen and (max-width: $bp-small) {
+    margin-right: 0;
+    margin-bottom: 3rem;
   }
 }
 
