--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -86,7 +86,7 @@
 // USER NAVIGATION
 .user-nav {
   align-self: stretch;                                    // To stretch the icon boxes vertically
-
+  position: relative;
   display: flex;                                          // To turn this into a flex container
   align-items: center;
 
@@ -126,7 +126,7 @@
     // Display notification on the upper layer
     position: absolute;
     top: 1.5rem;
-    right: 1.1rem;
+    right: 1.5rem;
 
     // To center the text only
     display: flex;
@@ -134,7 +134,98 @@
     align-items: center;
   }
 
+  //////////////////////////
+  // DONE display a message menu when hovering over the chat icon in .user-nav maybe like fb
+  &__messages {
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    top: 7rem;
+    right: 0;
+    z-index: 15;
+    width: 20rem;
+    background-color: var(--color-grey-light-1);
+    transition: visibility .2s,
+    opacity .4s;
+
+    @media only screen and (max-width: $bp-smallest) {
+      position: fixed;
+      top: 5rem;
+      right: 0;
+      width: 70%;
+      height: 100%;
+    }
+  }
+
+  &__message-list {
+    text-align: center;
+  }
+
+  &__message {
+    position: relative;
+    padding: 2rem 1rem;
+    list-style: none;
+    cursor: pointer;
+  }
+
+  &__message::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 3px;
+    height: 100%;
+    transform: scaleY(0);
+    background-color: var(--color-primary);
+    transition: transform .2s,
+    width .4s cubic-bezier(1, 0, 0, 1) .2s,
+    background-color .1s;
+  }
+
+  &__message:hover::before,
+  &__message--active::before {
+    transform: scaleY(1);
+    width: 100%;
+  }
+
+  &__message:active::before {
+    background-color: var(--color-primary-light);
+  }
+
+  &__message-link {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    color: var(--color-primary);
+    text-decoration: none;
+    text-transform: uppercase;
+    border-bottom: var(--line);
+    font-size: 1.6rem;
+
+    &:hover {
+      position: relative;
+      z-index: 15;
+      color: var(--color-grey-light-1);
+    }
+  }
+
+  &__message-name {
+    display: inline-block;
+  }
+
+  &__message-date {
+    display: inline-block;
+    margin-left: auto;
+    font-size: 1rem;
+  }
+
+  &__icon-box--chat:hover &__messages {
+    opacity: 1;
+    visibility: visible;
+  }
+
   &__user-photo {
+    width: 3.75rem;
     height: 3.75rem;
     border-radius: 50%;
     margin-right: 1rem;
