--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -230,6 +230,88 @@
     border-radius: 50%;
     margin-right: 1rem;
   }
+
+
+  // DONE add user menu when hovering over the username in .user-nav
+  &__menu {
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    top: 7rem;
+    right: 0;
+    z-index: 15;
+    width: 20rem;
+    background-color: var(--color-grey-light-1);
+    transition: visibility .2s,
+    opacity .4s;
+
+    @media only screen and (max-width: $bp-smallest) {
+      position: fixed;
+      top: 6rem;
+      right: 0;
+      width: 70%;
+      height: 100%;
+    }
+  }
+
+  &__list {
+    list-style: none;
+    text-align: center;
+  }
+
+  &__item {
+    position: relative;
+    padding: 2rem 1rem;
+    font-size: 1.4rem;
+    cursor: pointer;
+
+    @media only screen and (max-width: $bp-smallest) {
+      font-size: 2rem;
+    }
+  }
+
+  &__item::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 3px;
+    height: 100%;
+    transform: scaleY(0);
+    background-color: var(--color-primary);
+    transition: transform .2s,
+    width .4s cubic-bezier(1, 0, 0, 1) .2s,
+    background-color .1s;
+  }
+
+  &__item:hover::before,
+  &__item--active::before {
+    transform: scaleY(1);
+    width: 100%;
+  }
+
+  &__item:active::before {
+    background-color: var(--color-primary-light);
+  }
+
+  &__link {
+    padding: 1rem;
+    color: var(--color-primary);
+    text-decoration: none;
+    text-transform: uppercase;
+    border-bottom: var(--line);
+
+    &:hover {
+      position: relative;
+      z-index: 15;
+      color: var(--color-grey-light-1);
+    }
+  }
+
+  &__user:hover &__menu {
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 
