--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -19,11 +19,13 @@
   --line: 1px solid var(--color-grey-light-2);
 }
 
+// BREAK-POINT VARIABLES
+$bp-bigscreen:  125em;    // 2000px / 16px = 125em
 $bp-largest: 75em;        // 1200px / 16px = 75em
 $bp-large: 68.75em;       // 1100px / 16px = 68.75em
 $bp-medium: 56.25em;      // 900px / 16px = 56.25em
-$bp-small: 37.5em;      // 600px / 16px = 37.5em
-$bp-smallest: 31.25em;      // 500px / 16px = 31.25em
+$bp-small: 37.5em;        // 600px / 16px = 37.5em
+$bp-smallest: 31.25em;    // 500px / 16px = 31.25em
 
 
 * {
